# astertrade

./: .dockerignore  .env.example  .env.test  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_SUMMARY.md  DIGITALOCEAN_DEPLOYMENT.md  DNS_SETUP_GUIDE.md  DROPLET_TROUBLESHOOTING.md  Dockerfile  LICENSE  NGINX_TROUBLESHOOTING.md  README.md  SECURITY_IMPLEMENTATION.md  SIGNATURE_TROUBLESHOOTING.md  TRADINGVIEW_QUICK_START.md  aster-finance-futures-api-v3.md  docker-compose.yml  generate_api_key.py  main.py  pyproject.toml  requirements.txt  restart.sh  test_openapi.py  test_signature.py
.digitalocean/: APPLY_FIX_NOW.md  APPLY_NOW.md  ARCHITECTURE.md  CHANGES.md  COMPARISON.md  DEPLOYMENT_CHECKLIST.md  FIX_ROUTES_AND_SWAGGER.md  INDEX.md  QUICK_START.md  QUICK_UPDATE.md  README.md  SUMMARY.md  WORKFLOW.md  app.yaml  droplet-setup.sh  fix-nginx-routes.sh  nginx.conf  update-nginx-welcome.sh  welcome.html
docs/: API_KEY_QUICKREF.md  API_SECURITY.md  ASTERDEX_ADDRESSES_EXPLAINED.md  AUTHENTICATION_FLOW.md  LOGGING.md  NGINX_REVERSE_PROXY_EXPLAINED.md  OPENAPI_SECURITY_UPDATE.md  SECURITY_SETUP.md  SWAGGER_AUTH_GUIDE.md  SWAGGER_NOT_SHOWING_AUTH.md  TRADINGVIEW_SETUP.md  TRADINGVIEW_STRATEGY_TEMPLATE.md  WEBHOOK_SECRET_COMPARISON.md  WEBHOOK_SECRET_GUIDE.md  WEBHOOK_SECRET_QUICKREF.md
src/: __init__.py  app.py  config.py  error_handlers.py  exceptions.py  logging_config.py  security.py
src/api/: __init__.py  account.py  health.py  orders.py  positions.py  webhook.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_error_handling.py  test_logging.py
(+10 files in other folders)
